# foleys_license_client

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  LicenseData_8cpp.html  LicenseDeactivate_8cpp.html  LicenseDeactivate_8h.html  LicensePanel_8cpp.html  LicensePanel_8h.html  LicensingDemoEditor_8cpp.html  LicensingDemoEditor_8h.html  LicensingDemoProcessor_8cpp.html  LicensingDemoProcessor_8h.html  README.md  README_8md.html  annotated.html  annotated_dup.js  choc__Base64_8h.html  choc__Base64_8h.js  classDeactivateItem-members.html  classDeactivateItem.html  classLicenseDeactivate-members.html  classLicenseDeactivate.html  classLicensePanel-members.html  classLicensePanel.html  classLicensingDemoEditor-members.html  classLicensingDemoEditor.html  classLicensingDemoProcessor-members.html  classLicensingDemoProcessor.html  classes.html  classfoleys_1_1License-members.html  classfoleys_1_1License.html  classfoleys_1_1License.js  classfoleys_1_1LicenseUpdater-members.html  classfoleys_1_1LicenseUpdater.html  classfoleys_1_1LicenseUpdater.js  classfoleys_1_1NetworkRequest-members.html  classfoleys_1_1NetworkRequest.html  classfoleys_1_1NetworkRequest.js  classfoleys_1_1ObserverList-members.html  (+89 more)
.github/workflows/: build.yml  staticlibs.yml
cmake/: CPR.cmake  GHC-filesystem.cmake  Juce.cmake  PlatformFolders.cmake  Sodium.cmake  nlohmann.cmake
examples/juce_plugin/: CMakeLists.txt  LicenseDeactivate.cpp  LicenseDeactivate.h  LicensePanel.cpp  LicensePanel.h  LicensingDemoEditor.cpp  LicensingDemoEditor.h  LicensingDemoProcessor.cpp  LicensingDemoProcessor.h
examples/minimal/: CMakeLists.txt  main.cpp
foleys_license_common/: foleys_Crypto.cpp  foleys_License.cpp  foleys_License.h  foleys_LicenseData.h  foleys_LicenseDefines.h  foleys_LicenseHelpers.h
foleys_license_common/libsodium/: README.md
foleys_license_common/libsodium/msvc-142/: libsodium.lib
foleys_license_juce/: foleys_license_juce.cpp  foleys_license_juce.h  foleys_license_juce.mm
foleys_license_juce/Backend/: foleys_Checks.h  foleys_LicensePimpl.cpp  foleys_LicenseUpdaterJuce.cpp  foleys_LicenseUpdaterJuce.h
foleys_license_juce/GUI/: foleys_FileDragButton.cpp  foleys_FileDragButton.h  foleys_LicenseDeactivate.cpp  foleys_LicenseDeactivate.h  foleys_LicensePanel.cpp  foleys_LicensePanel.h  foleys_PopupHolder.h
foleys_license_lib/: CMakeLists.txt  foleys_Checks.h  foleys_LicensePimpl.cpp  foleys_LicenseUpdater.cpp  foleys_LicenseUpdater.h  foleys_NetworkRequest.h  foleys_NetworkRequest.mm
lib/: CMakeLists.txt
search/: all_0.js  all_10.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_7.js  defines_0.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_e.js  namespaces_0.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js  (+3 more)
src/: CMakeLists.txt  foleys_License.cpp  foleys_License.h
src/juce/: foleys_JuceUtilities.h
src/private/: foleys_Crypto.cpp  foleys_LicenseUpdater.cpp  foleys_LicenseUpdater.h  foleys_Licensing.h  foleys_NetworkRequest.cpp  foleys_NetworkRequest.h  foleys_NetworkRequest.mm  foleys_Observers.h  foleys_SharedObject.h  foleys_SystemInfo.cpp  foleys_SystemInfo.h
